--- a/Frontend/src/components/styles/loginStyle.css
+++ b/Frontend/src/components/styles/loginStyle.css
@@ -8,9 +8,9 @@
 
 #form {
     min-height: 300px;
-    min-width: 300px;
-    width: 30%;
-    height: 65%;
+    min-width: 250px;
+    width: 25%;
+    height: 75%;
     background-color: rgb(255, 255, 255);
     border-radius: 10px;
 }
@@ -31,7 +31,7 @@ form{
 
 input {
     height: 30px;
-    width: 60%;
+    width: 70%;
     margin: 10px;
     border: 0;
     border-bottom: 1.5px solid #F09819;
@@ -56,7 +56,7 @@ input:focus {
     font-weight: 400;
 }
 
-.button {
+#button {
   width: 50%;
   margin: 50px auto 0 auto ;
   padding: 15px 30px;
@@ -75,19 +75,20 @@ input:focus {
   touch-action: manipulation;
 }
 
-.button:hover {
+#button:hover {
   background-position: right center;
   /* change the direction of the change here */
   color: #fff;
   text-decoration: none;
 }
 
-.button:active {
+#button:active {
   transform: scale(0.95);
 }
 
 form > p {
   font-size: 12px;
+  margin-top: 20px;
 }
 
 #image {
